Clean up usage of bukkit api in squaremap-api